data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_730.wast
;; 1. Test a `br_table` instruction with a negative index, then immediately follow it with a `nop`. This will check if `nop` affects how out-of-bounds indices are handled in `br_table`.

(assert_invalid
  (module
    (func (block (br_table -1 (nop))))
  )
  "br_table index out of bounds"
)